Added tests for MemoryTracker and ModelManager (#892)
Signed-off-by: Owais Kazi <owaiskazi19@gmail.com>